# agentpassport

./: AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  install.ps1  install.sh  layman.md  pyproject.toml
agentpassport/: __init__.py  __main__.py  cli.py  connect.py  core.py
demos/01-basic/: SCENARIO.md
demos/02-rag-4-hop-chain/: SCENARIO.md  passport.json
demos/03-escalation-tamper/: SCENARIO.md  passport.json
demos/04-ci-ttl-deploy/: SCENARIO.md  passport.json
demos/05-least-privilege-fanout/: SCENARIO.md  doc-writer.json  mailer.json  planner.json  scheduler.json
demos/06-rotated-key-mismatch/: SCENARIO.md  passport.json
demos/07-missing-issuer-key/: SCENARIO.md  passport.json
demos/08-mcp-tool-gating/: SCENARIO.md  passport.json
demos/09-auto-narrow-subset/: SCENARIO.md  passport.json
docs/: INSTALL.md
examples/: help.txt  version.txt
scripts/: build_demos.py
tests/: test_connect.py  test_demos.py  test_hardening.py  test_smoke.py  test_ttl.py
